--- a/Questions/Base.lproj/Main.storyboard
+++ b/Questions/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gAb-7m-ro0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gAb-7m-ro0">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -104,8 +104,11 @@
                             <constraint firstAttribute="trailing" secondItem="NUm-A4-fFd" secondAttribute="trailing" id="yWq-1b-vLx"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Questions" id="NNG-gj-jju"/>
+                    <navigationItem key="navigationItem" title="Questions" id="NNG-gj-jju">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="j3K-iX-bif"/>
+                    </navigationItem>
                     <connections>
+                        <outlet property="doneBarButtonItem" destination="j3K-iX-bif" id="TUh-8B-cvR"/>
                         <outlet property="questionsCollectionView" destination="NUm-A4-fFd" id="Apf-dU-wNe"/>
                     </connections>
                 </viewController>
